hphp/hack/test/typecheck/parse_int_with_underscore_bad2.php.exp
File "parse_int_with_underscore_bad2.php", line 5, characters 24-24:
Expected ; (Parsing[1002])
